--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -15,10 +15,10 @@ services:
       - APP_SETTINGS=project.config.DevelopmentConfig
       - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_dev
       - DATABASE_TEST_URL=postgres://postgres:postgres@users-db:5432/users_test
-    depends_on:  
+    depends_on:  # nuevo
       - users-db
 
-  users-db:  
+  users-db:  # nuevo
     build:
       context: ./services/users/project/db
       dockerfile: Dockerfile
@@ -35,5 +35,22 @@ services:
     restart: always
     ports:
       - 80:80
+    depends_on:
+      - users
+      - client
+
+  client:
+    build:
+      context: ./services/client
+      dockerfile: Dockerfile-dev
+    volumes:
+      - './services/client:/usr/src/app'
+      - '/usr/src/app/node_modules'
+    ports:
+      - 3007:3000
+    environment:
+      - NODE_ENV=development
+      - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+      - CHOKIDAR_USEPOLLING=true
     depends_on:
       - users
