--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -12,10 +12,10 @@ services:
       - APP_SETTINGS=project.config.ProductionConfig
       - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_prod
       - DATABASE_TEST_URL=postgres://postgres:postgres@users-db:5432/users_test
-    depends_on:  
+    depends_on:  # nuevo
       - users-db
 
-  users-db:  
+  users-db:  # nuevo
     build:
       context: ./services/users/project/db
       dockerfile: Dockerfile
@@ -26,11 +26,26 @@ services:
       - POSTGRES_PASSWORD=postgres
 
   nginx:
+    container_name: nginx
     build:
       context: ./services/nginx
       dockerfile: Dockerfile-prod
     restart: always
     ports:
       - 80:80
+    depends_on:
+      - users
+      - client  # nuevo
+
+  client:
+    container_name: client
+    build:
+      context: ./services/client
+      dockerfile: Dockerfile-prod
+      args:
+        - NODE_ENV=production
+        - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+    ports:
+      - '3007:80'
     depends_on:
       - users
