--- a/services/users/Dockerfile-dev
+++ b/services/users/Dockerfile-dev
@@ -1,13 +1,11 @@
 # image base
-FROM python:3.7.2-alpine
-
+FROM python:3.7.2-slim
 # nuevo
-# instalando dependencias
-RUN apk update && \
-    apk add --virtual build-deps gcc python-dev musl-dev && \
-    apk add postgresql-dev && \
-    apk add netcat-openbsd
-
+# instalando netcat
+RUN apt-get update && \
+    apt-get -y install netcat && \
+    apt-get clean
+    
 # establecido directorio de trabajo
 WORKDIR /usr/src/app
 
@@ -15,7 +13,6 @@ WORKDIR /usr/src/app
 COPY ./requirements.txt /usr/src/app/requirements.txt
 RUN pip install -r requirements.txt
 
-# nuevo
 # copiando entrypoint.sh
 COPY ./entrypoint.sh /usr/src/app/entrypoint.sh
 RUN chmod +x /usr/src/app/entrypoint.sh
@@ -23,6 +20,5 @@ RUN chmod +x /usr/src/app/entrypoint.sh
 # copiando app
 COPY . /usr/src/app
 
-# nuevo
 # ejecutando servidor
 CMD ["/usr/src/app/entrypoint.sh"]
