--- a/services/users/requirements.txt
+++ b/services/users/requirements.txt
@@ -6,4 +6,7 @@ gunicorn==19.9.0
 coverage==4.5.3 
 flake8===3.7.7
 flask-debugtoolbar==0.10.1
+coverage==4.5.3
 flask-cors==3.0.7
+flask-migrate==2.4.0
+flask-bcrypt==0.7.1
