--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,55 +2,29 @@ version: '3.7'
 
 services:
 
-  users:
-    build:
-      context: ./services/users
-      dockerfile: Dockerfile-dev
-    volumes:
-      - './services/users:/usr/src/app'
-    ports:
-      - 5001:5000
-    environment:
-      - FLASK_ENV=development
-      - APP_SETTINGS=project.config.DevelopmentConfig
-      - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_dev
-      - DATABASE_TEST_URL=postgres://postgres:postgres@users-db:5432/users_test
-    depends_on:  # nuevo
-      - users-db
+ orders:
+   build:
+     context: ./services/orders
+     dockerfile: Dockerfile-dev
+   volumes:
+     - './services/orders:/usr/src/app'
+   ports:
+     - 6001:5000
+   environment:
+     # - FLASK_APP=project/__init__.py
+     - FLASK_ENV=development
+     - APP_SETTINGS=project.config.DevelopmentConfig  # nuevo
+     - DATABASE_URL=postgres://postgres:postgres@orders-db:5432/orders_dev  # nuevo
+     - DATABASE_TEST_URL=postgres://postgres:postgres@orders-db:5432/orders_test  # nuevo
+   depends_on:  # nuevo
+     - orders-db
 
-  users-db:  # nuevo
-    build:
-      context: ./services/users/project/db
-      dockerfile: Dockerfile
-    ports:
-      - 5435:5432
-    environment:
+ orders-db:  # nuevo
+   build:
+     context: ./services/orders/project/db
+     dockerfile: Dockerfile
+   ports:
+      - 5436:5432
+   environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-
-  nginx:
-    build:
-      context: ./services/nginx
-      dockerfile: Dockerfile-dev
-    restart: always
-    ports:
-      - 80:80
-    depends_on:
-      - users
-      - client
-
-  client:
-    build:
-      context: ./services/client
-      dockerfile: Dockerfile-dev
-    volumes:
-      - './services/client:/usr/src/app'
-      - '/usr/src/app/node_modules'
-    ports:
-      - 3007:3000
-    environment:
-      - NODE_ENV=development
-      - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
-      - CHOKIDAR_USEPOLLING=true
-    depends_on:
-      - users
