--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,29 +1,41 @@
 version: '3.7'
 
 services:
-
   users:
     build:
       context: ./services/users
       dockerfile: Dockerfile-prod
-    ports:
+    expose:
       - 5000
     environment:
+      - FLASK_ENV=production
       - APP_SETTINGS=project.config.ProductionConfig
-      - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_prod
-      - DATABASE_TEST_URL=postgres://postgres:postgres@users-db:5432/users_test
-    depends_on:  # nuevo
+      - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_prod  # nuevo
+      - DATABASE_TEST_URL=postgres://postgres:postgres@users-db:5432/users_test  # nuevo
+    depends_on:
       - users-db
 
-  users-db:  # nuevo
+  users-db:
     build:
       context: ./services/users/project/db
       dockerfile: Dockerfile
     ports:
-      - 5432
+      - 5435:5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+  client:
+    container_name: client
+    build:
+      context: ./services/client
+      dockerfile: Dockerfile-prod
+      args:
+        - NODE_ENV=production
+        - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+    ports:
+        - '3007:80'
+    depends_on:
+        - users
 
   nginx:
     container_name: nginx
@@ -35,17 +47,4 @@ services:
       - 80:80
     depends_on:
       - users
-      - client  # nuevo
-
-  client:
-    container_name: client
-    build:
-      context: ./services/client
-      dockerfile: Dockerfile-prod
-      args:
-        - NODE_ENV=production
-        - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
-    ports:
-      - '3007:80'
-    depends_on:
-      - users
+- client
